--- a/client/package.json
+++ b/client/package.json
@@ -16,9 +16,11 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
+    "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
     "react-lazyload": "^3.2.1",
     "react-router-dom": "^6.28.1",
+    "react-simple-captcha": "^9.3.1",
     "sweetalert2": "^11.15.3",
     "sweetalert2-react-content": "^5.1.0"
   },
