--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react-icons": "^5.4.0",
     "react-lazyload": "^3.2.1",
     "react-router-dom": "^6.28.1",
+    "react-select": "^5.9.0",
     "react-simple-captcha": "^9.3.1",
     "sweetalert2": "^11.15.3",
     "sweetalert2-react-content": "^5.1.0"
