--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^6.28.1",
     "react-select": "^5.9.0",
     "react-simple-captcha": "^9.3.1",
+    "react-toastify": "^11.0.3",
     "sweetalert2": "^11.15.3",
     "sweetalert2-react-content": "^5.1.0"
   },
