--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "react-select": "^5.10.0",
     "react-simple-captcha": "^9.3.1",
     "react-toastify": "^11.0.3",
+    "recharts": "^2.15.1",
     "sweetalert2": "^11.15.3",
     "sweetalert2-react-content": "^5.1.0"
   },
