--- a/client/package.json
+++ b/client/package.json
@@ -10,17 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.16",
     "axios": "^1.7.9",
     "firebase": "^11.1.0",
     "framer-motion": "^12.5.0",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
+    "quill": "^2.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
     "react-lazyload": "^3.2.1",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.28.1",
     "react-select": "^5.10.0",
     "react-simple-captcha": "^9.3.1",
