--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "firebase": "^11.1.0",
     "framer-motion": "^12.5.0",
     "js-cookie": "^3.0.5",
+    "jspdf": "^3.0.1",
     "jwt-decode": "^4.0.0",
     "quill": "^2.0.3",
     "react": "^18.3.1",
