Commenting system is almost done

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-  "cSpell.words": ["mongodump", "Unban", "Uncategorized"]
+  "cSpell.words": [
+    "Enginge",
+    "headlessui",
+    "mongodump",
+    "Pinterest",
+    "Unban",
+    "Uncategorized"
+  ]
 }
