--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/typography": "^0.5.16",
+    "@tanstack/react-query-devtools": "^5.74.4",
     "axios": "^1.7.9",
     "firebase": "^11.1.0",
     "framer-motion": "^12.5.0",
