--- a/client/package.json
+++ b/client/package.json
@@ -10,17 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@tailwindcss/typography": "^0.5.16",
     "@tanstack/react-query-devtools": "^5.74.4",
     "axios": "^1.7.9",
     "firebase": "^11.1.0",
-    "framer-motion": "^12.5.0",
+    "framer-motion": "^12.10.5",
     "js-cookie": "^3.0.5",
     "jspdf": "^3.0.1",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.509.0",
     "quill": "^2.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-fast-marquee": "^1.6.5",
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
